# everdao-api

./: .dockerignore  .env  .gitignore  .gitlab-ci.everdao.yml  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  TODO.gitlab-ci.yml  entrypoint.sh  sqlx-data.json
kustomize/: overrides.everdao.prod.yaml  overrides.prod.yaml  overrides.test.yaml  service-http-expose.everdao.prod.yaml  service-http-expose.prod.yaml  service-http-expose.test.yaml
migrations/: 20210930113732_init_db.sql  20211008142604_trigger.sql  20211021095208_transfers.sql  20211119140143_init_db.sql  20211204084405_proposals_add_time_blocks_for_events.sql  20211219093857_indexes.sql  20211224105923_column_unique.sql  20211228111031_raw_transaction_state.sql
src/: lib.rs  main.rs  server.rs  settings.rs
src/api/: docs.rs  mod.rs  utils.rs
src/api/controllers/: mod.rs  proposals.rs  staking.rs  voters.rs  votes.rs
src/api/requests/: mod.rs
src/api/responses/: mod.rs
src/everdao_contracts/: proposal_contract.rs  userdata_contract.rs
src/global_cache/: mod.rs  proposal.rs  vote.rs
src/indexer/: extract_events.rs  mod.rs  parse_staking_events.rs  parse_transfer_events.rs  utils.rs
src/indexer/abi/: DaoRoot.abi.json  EthereumEventConfiguration.abi.json  Proposal.abi.json  ProxyTokenTransfer.abi.json  Staking.abi.json  TokenTransferEthereumEvent.abi.json  TokenTransferTonEvent.abi.json  TonEventConfiguration.abi.json  UserData.abi.json  mod.rs
src/indexer/bridge_dao/: extract_events.rs  mod.rs  parse_dao_events.rs  parse_proposal_events.rs  parse_userdata_events.rs
src/models/: address_type.rs  direction.rs  event_type.rs  events.rs  graphql_responses.rs  mod.rs  proposal_ordering.rs  proposal_state.rs  proposals.rs  raw_transactions.rs  sqlx.rs  stakeholders_ordering.rs  timeframe.rs  token_white_list.rs  transaction_ordering.rs  transfer_status.rs  transfers_ordering.rs  user_type.rs  vote_ordering.rs  voters.rs  votes.rs
src/models/abi/: dao_root.rs  ethereum_event_configuration.rs  mod.rs  proposal.rs  proxy_token_transfer.rs  staking.rs  token_transfer_ethereum_event.rs  token_transfer_ton_event.rs  ton_event_configuration.rs  user_data.rs  vote_cast.rs
src/models/reqwest/: requests.rs  responses.rs
src/models/transfer_enums/: abi_type.rs  mod.rs  ton_status.rs  transfer_kind.rs
src/reqwest_client/: mod.rs
src/services/: mod.rs  proposal.rs  proposals.rs  staking.rs  transfers.rs  utils.rs  voters.rs  votes.rs
src/sqlx_client/: balances.rs  graph_data.rs  graphql_endpoints.rs  mod.rs  proposals.rs  raw_transactions.rs  relay_events.rs  rounds_info.rs  stakeholders.rs  transactions.rs  transfers.rs  unknown_user_keys.rs  user_keys.rs  vault_info.rs  voters.rs  votes.rs
src/ton_contracts/: dao_root_contract.rs  mod.rs  proposal_contract.rs  userdata_contract.rs
src/utils/: mod.rs  part_builder.rs  row_reader.rs
