[package]
name = "bridge-dao-indexer"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
name = "bridge_dao_indexer_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
cached = "0.23.0"
chrono = { version = "*", features = ["serde"] }
config = { version = "0.9", default-features = false }
derive_more = "*"
graphql_client = "0.10.0"
futures = { version = "0.3" }
http = "0.2"
hyper = { version = "0.14" }
hex = "*"
log = { version = "0.4", features = ["std", "serde"] }
num-traits = "0.2"
pin-project = "0.4"
opg = "0.0"
rust_decimal = "1"
sentry = { version = "0.22", features = ["log", "debug-logs"] }
sentry-panic = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
url = { version = "2.2.0", features = ["serde"] }
warp = { version = "0.3" }
anyhow = "1.0.38"
lazy_static = "1.4.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "decimal", "offline", "chrono", "json"] }
itertools = "0.10.0"
reqwest = "0.11.4"
regex = "1.5.4"
urlencoding = "2.1.0"

dexpa = { git = "ssh://git@gitlab.dexpa.io/rust/libdexpa", features = ["sentry-integration"] }
stackdriver_logger = { git = "https://github.com/dexpa/stackdriver-logger" }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

indexer-lib = { git = "ssh://git@gitlab.dexpa.io/broxus/legacy-node-indexer" }
ton-consumer = { git = "ssh://git@gitlab.dexpa.io/beton/ton-consumer" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

[dependencies.ton_api]
git = "https://github.com/broxus/ton-labs-tl.git"
package = "ton_api"
features = ["lite_api", "ton_api"]

[dev-dependencies]
env_logger = "0.8.4"
