[package]
name = "dao-api"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
cached = "0.23.0"
chrono = { version = "*", features = ["serde"] }
config = { version = "0.9", default-features = false }
everscale-network = "0.3.4"
derive_more = "*"
futures = { version = "0.3" }
http = "0.2"
hyper = { version = "0.14" }
hex = "*"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["std", "serde"] }
num-traits = "0.2"
pin-project = "0.4"
opg = "0.1.0"
once_cell = "1.8"
parking_lot = { version = "0.11.1", default_features = false }
rust_decimal = "1"
sentry = { version = "0.22", features = ["log", "debug-logs"] }
sentry-panic = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0.26"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
url = { version = "2.2.0", features = ["serde"] }
warp = { version = "0.3" }
anyhow = "1.0.38"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "decimal", "offline", "chrono", "json"] }
itertools = "0.10.0"
reqwest = "0.11.10"
regex = "1.5.4"
urlencoding = "2.1.0"

stackdriver_logger = { git = "https://github.com/dexpa/stackdriver-logger" }

nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

indexer-lib = { git = "https://github.com/broxus/legacy-node-indexer" }
transaction-consumer = { git = "https://github.com/broxus/transaction-consumer" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
transaction-buffer = {git = "https://github.com/broxus/transaction-buffer.git"}

[dev-dependencies]
env_logger = "0.8.4"
